# page-index

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  prompt.txt  pyproject.toml
PageIndex/: pyproject.toml
PageIndex/pageindex/: config.yaml  utils.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
logs/: ilide.info-ca-c-da-ng-ba-i-ta-p-computer-architecture-it3030e-hust-pr_b38d31ccdc7539f672d0b91faebf2a6c.pdf_20260330_231131.json  ilide.info-ca-c-da-ng-ba-i-ta-p-computer-architecture-it3030e-hust-pr_b38d31ccdc7539f672d0b91faebf2a6c.pdf_20260330_232025.json  ilide.info-ca-c-da-ng-ba-i-ta-p-computer-architecture-it3030e-hust-pr_b38d31ccdc7539f672d0b91faebf2a6c.pdf_20260330_232507.json  ilide.info-ca-c-da-ng-ba-i-ta-p-computer-architecture-it3030e-hust-pr_b38d31ccdc7539f672d0b91faebf2a6c.pdf_20260330_233922.json
workspace/: _meta.json  ef3214f6-bc67-4c2c-a3ae-ab79c9964d33.json  jobs.json
