[project]
name = "pageindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Local PageIndex library dependencies (replaces cloud pageindex SDK)
    "litellm>=1.82.0",
    "pymupdf>=1.26",
    "PyPDF2>=3.0",
    "pyyaml>=6.0",
    # LLM providers (for retrieval & answer generation)
    "anthropic>=0.40",  # Claude (preferred)
    "openai>=1.0",      # OpenAI fallback
    # Web API
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
