[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pageindex"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.82.0",
    "pymupdf>=1.26",
    "PyPDF2>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pageindex*"]
